--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class=" header-one ">
             <div class='header container-fluid'>
                 <div class='float'>
-                    <a class="navbar-brand" href="#root"> <img src='/Revivv/logo.svg' alt='img' /></a>
+                    <a class="navbar-brand" href="#root"> <img src='./Revivv/logo.png' alt='imgg' /></a>
                     <ul class="main-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#root">Book a session</a>
@@ -84,14 +84,14 @@
                             <a class="button button-two" href="#root">Register</a>
                         </li>
                     </ul>
-                    <img src="/Revivv/LandingPageMain.svg">
+                    <img src="./Revivv/LandingPageMain.svg">
                 </div>
     </header>
 
     <section>
         <div class='container-fluid'>
             <div class='float first-contain'>
-                <img class='img2' src='/Revivv/HomeSection2Asset.svg' alt='image' />
+                <img class='img2' src='./Revivv/HomeSection2Asset.svg' alt='image' />
             </div>
             <div class='float second-contain'>
                 <h2>Have an Emergency?</h2>
@@ -409,7 +409,7 @@
         <h1>Brief Assessment</h1>
         <p>Answer a few questions about your prefernces</p>
     </div>
-    <div class="works col-xs-4"> <img src="/Revivv/HowItWorksPickVolunteer.svg">
+    <div class="works col-xs-4"> <img src="./Revivv/HowItWorksPickVolunteer.svg">
         <h1>Pick your Volunteer</h1>
         <p>Select from a list of recommendation</p>
     </div>
@@ -460,7 +460,7 @@
     </div>
     </div>
     </section>
-    <!-----footer----->
+    <!-----footer------>
     <footer class="footer-copyrights">
         <div id="footer-bottom">
             <div class="container">
